--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header><h1>Hlobile </br>Makukule</h1></header>
+    <main>
+        <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
+    </main>
+    <footer></footer>
 </body>
 </html>
