styled the page more

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <header><h1>Hlobile </br>Makukule</h1></header>
     <main>
+        <div class="menu">
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">GitHub Profile</a></li>
+                <li><a href="#">CV</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
         <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
     </main>
     <footer></footer>
