--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
         <div class="menu">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">GitHub Profile</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
+                <li><a href="#">CV</a>
+                    <div class="cv-menu">
+                        <ul>
+                            <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
+                            <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
             </ul>
         </div>
         <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
