styled contact.html a bit more

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
             </ul>
         </div>
