--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
     <div class="form">
         <form>
             <label for="flname">Name and Surname</label><br>
-            <input type="text" id="flname" name="flname"><br><br>
+            <input class="input-class" type="text" id="flname" name="flname"><br><br>
             <label for="pemail">Email</label><br>
-            <input type="email" id="pemail" name="pemail"><br><br>
+            <input class="input-class" type="email" id="pemail" name="pemail"><br><br>
             <label for="message">Message</label><br>
-            <textarea name="message" rows="10" cols="30"></textarea><br><br>
+            <textarea class="input-class" name="message" rows="10" cols="30"></textarea><br><br>
             <button type="submit">Send</button>
         </form>
     </div>
