worked more on contact page

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <input class="input-class" type="email" id="pemail" name="pemail"><br><br>
             <label for="message">Message</label><br>
             <textarea class="input-class" name="message" rows="10" cols="30"></textarea><br><br>
-            <button type="submit">Send</button>
+            <button class="send-class" type="submit">Send</button>
         </form>
     </div>
 </body>
