added the about page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="menu">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
