--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
