--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
                         <ul>
