added a projects page and changed colours for heading and intro for contrast purposes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hlobile Makukule</title>
 </head>
 <body>
     <header><h1>Hlobile </br>Makukule</h1></header>
@@ -15,7 +15,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="project.html">Projects</a></li>
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
                         <ul>
