gave my pages meaningful titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hlobile Makukule</title>
+    <title>Hlobile Makukule - Home</title>
 </head>
 <body>
     <header><h1>Hlobile </br>Makukule</h1></header>
