--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hlobile Makukule - Projects</title>
 </head>
 <body>
     <h1>Cool projects will soon appear here!</h1>
