--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hlobile's Tech Journey</title>
+    <title>Hlobile Makukule - About</title>
 </head>
 <body>
     <div class="about-page">
