--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Hlobile</title>
+    <title>Hlobile Makukule- Contact</title>
 </head>
 <body>
     <div class="form">
