--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hlobile's Skills</title>
+    <title>Hlobile Makukule - Skills</title>
 </head>
 <body>
     <div class="lists">
