addressed suggested changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="menu">
             <ul>
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
