--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,25 @@
     <title>Hlobile Makukule - Skills</title>
 </head>
 <body>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="skills.html">Skills</a></li>
+            <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="#">CV</a>
+                <div class="cv-menu">
+                    <ul>
+                        <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
+                        <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
+        </ul>
+    </div>
     <div class="lists">
         <ul class="list-two">
             <li>Web Application Development</li>
