made requested changes on skills

--- a/skills.html
+++ b/skills.html
@@ -28,14 +28,14 @@
     </div>
     <div class="lists">
         <ul class="list-two">
-            <li>Web Application Development</li>
-            <li>Object-Oriented Programming</li>
-            <li>Agile Methodology</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Test Driven Development - Jasmin</li>
         </ul>
         <ul class="list-one">
-            <li>Continuous Intergration</li>
-            <li>Continuous Deployment</li>
-            <li>Software Testing</li>
+            <li>Git</li>
+            <li>Python</li>
+            <li>Javascript</li>
         </ul>
     </div>
 </body>
