fixed Jasmine spelling

--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,7 @@
         <ul class="list-two">
             <li>HTML</li>
             <li>CSS</li>
-            <li>Test Driven Development - Jasmin</li>
+            <li>Test Driven Development - Jasmine</li>
         </ul>
         <ul class="list-one">
             <li>Git</li>
