created a burger menu and made home and about responsive

--- a/project.html
+++ b/project.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hlobile Makukule - Projects</title>
 </head>
 <body>
-    <div class="menu">
+    <div><img class="burger" src="./images/download.png" onclick="toggleNav()"></div>
+    <div class="menu" id="burgerMenu">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
