--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hlobile Makukule - Home</title>
@@ -9,7 +10,8 @@
 <body>
     <header><h1>Hlobile </br>Makukule</h1></header>
     <main>
-        <div class="menu">
+        <div><img class="burger" src="./images/download.png" onclick="toggleNav()"></div>
+        <div class="menu" id="burgerMenu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
