changed the burger menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header><h1>Hlobile </br>Makukule</h1></header>
     <main>
-        <div><img class="burger" src="./images/download.png" onclick="toggleNav()"></div>
+        <div><img class="burger" src="./images/burger.png" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
