--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
     <title>Hlobile Makukule - Projects</title>
 </head>
 <body>
-    <div><img class="burger" src="./images/download.png" onclick="toggleNav()"></div>
+    <div><img class="burger" src="./images/burger.png"onclick="toggleNav()"></div>
     <div class="menu" id="burgerMenu">
         <ul>
             <li><a href="index.html">Home</a></li>
