--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Hlobile Makukule - Home</title>
 </head>
 <body>
-    <header><h1>Hlobile </br>Makukule</h1></header>
+    <div>
+        <h1>Hlobile </br>Makukule</h1>
+        <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
+    </div>
     <main>
-        <div><img class="burger" src="./images/burger.png" onclick="toggleNav()"></div>
+        <div><img class="burger" id="closedMenu" src="./images/burger.png" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
@@ -21,8 +24,8 @@
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
                         <ul>
-                            <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
-                            <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
+                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
+                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
                         </ul>
                     </div>
                 </li>
@@ -30,7 +33,6 @@
                 <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank" alt="linkedin logo"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
             </ul>
         </div>
-        <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
     </main>
     <footer></footer>
 </body>
