--- a/project.html
+++ b/project.html
@@ -8,25 +8,28 @@
     <title>Hlobile Makukule - Projects</title>
 </head>
 <body>
-    <div><img class="burger" src="./images/burger.png"onclick="toggleNav()"></div>
-    <div class="menu" id="burgerMenu">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
-            <li class="active"><a href="project.html">Projects</a></li>
-            <li><a href="#">CV</a>
-                <div class="cv-menu">
-                    <ul>
-                        <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
-                        <li><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
-        </ul>
+    <main>
+        <div><img class="burger" id="closedMenu" src="./images/burger.png" onclick="toggleNav()"></div>
+        <div class="menu" id="burgerMenu">
+            <ul>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="#">CV</a>
+                    <div class="cv-menu">
+                        <ul>
+                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
+                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank" alt="linkedin logo"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
+            </ul>
+        </div>
+    </main>
     </div>
     <div class="proj-heading">
         <h2>Cool projects will soon appear here!</h2>
