got a white burger menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
     </div>
     <main>
-        <div><img class="burger" id="closedMenu" src="./images/burger.png" onclick="toggleNav()"></div>
+        <div><img class="burger" id="closedMenu" src="./images/burger.svg" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
