--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div><img class="burger" id="closedMenu" src="./images/burger.png" onclick="toggleNav()"></div>
+        <div><img class="burger" id="closedMenu" src="./images/burger.svg" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
