worked on min screen size 376px  max screen size 600px

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <div><img class="burger" id="closedMenu" src="./images/burger.svg" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
@@ -25,7 +25,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
                 <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank" alt="linkedin logo"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
             </ul>
         </div>
