--- a/project.html
+++ b/project.html
@@ -12,11 +12,11 @@
         <div><img class="burger" id="closedMenu" src="./images/burger.svg" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="https://github.com/ACodingSunflower" target="_blank">GitHub Profile</a></li>
-                <li><a href="project.html">Projects</a></li>
+                <li class="active"><a href="project.html">Projects</a></li>
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
                         <ul>
