made changes based on the validator errors

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div><img class="burger" id="closedMenu" src="./images/burger.svg" onclick="toggleNav()"></div>
+        <div><img class="burger" id="closedMenu" src="./images/burger.svg" alt="Menu dropdown" onclick="toggleNav()"></div>
         <div class="menu" id="burgerMenu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,13 +20,13 @@
                 <li><a href="#">CV</a>
                     <div class="cv-menu">
                         <ul>
-                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
-                            <li class="inner-item"><a href="./CV/Hlobile Makukule SWE-CV.docx.pdf" target="_blank">View CV</a></li>
+                            <li class="inner-item"><a href="./CV/Hlobile-Makukule-SWE-CV.docx.pdf" download="Hlobile Makukule CV">Download CV</a></li>
+                            <li class="inner-item"><a href="./CV/Hlobile-Makukule-SWE-CV.docx.pdf" target="_blank">View CV</a></li>
                         </ul>
                     </div>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank" alt="linkedin logo"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png"/></a></li>
+                <li><a href="https://www.linkedin.com/in/hlobile-makukule-7a7a76265/" target="_blank"><img class="logo" src="./images/linkedin-icon-1024x1024-net2o24e.png" alt="linkedin logo"></a></li>
             </ul>
         </div>
         <div class="about-page">
