fixed error found by Keabaka

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Hlobile </br>Makukule</h1>
+        <h1>Hlobile <br>Makukule</br></h1>
         <p  class="intro">A sunflower with coding abilities. Step into my code.</p>
     </div>
     <main>
